Gradient fields refactoring